export interface Vessel {
    imo: string;
    name: string;
    type: string;
    owner: string;
    length: number;
    depth: number;
    draft: number;
}